<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="21dp"
    tools:context=".ui.journal.DetailJournalActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="15dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/arrow_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="9dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/baseline_arrow_back_24" />

        <TextView
            android:id="@+id/question_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/plusjakartasans_bold"
            android:paddingHorizontal="9dp"
            android:layout_marginStart="40dp"
            android:text="@string/journal"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_nav">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/date_of_journal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:gravity="center"
                android:textSize="16sp"
                android:fontFamily="@font/plusjakartasans_bold"
                android:text="@string/monday_3_june_2024" />

            <ImageView
                android:id="@+id/result_emoji"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:layout_gravity="center"
                android:textSize="14sp"
                android:fontFamily="@font/plusjakartasans_bold"
                android:text="@string/normal" />


            <TextView
                android:id="@+id/thoughts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:fontFamily="@font/plusjakartasans_bold"
                android:text="@string/thoughts" />

            <TextView
                android:id="@+id/thought_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:textSize="14sp"
                android:fontFamily="@font/plusjakartasans_regular"
                android:text="@string/thoughts_value" />

            <TextView
                android:id="@+id/quotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:fontFamily="@font/plusjakartasans_bold"
                android:text="@string/quotes" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/border"
                android:layout_weight="1"
                android:text="@string/quotes_value" />
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav_view"
        style="@style/BottomNavigationViewStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>