<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/color_gradient_auth"
    tools:context=".ui.authentication.AuthenticationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingVertical="80dp"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:id="@+id/text_welcome_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to"
            android:layout_marginTop="45dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/plusjakartasans"/>

        <TextView
            android:id="@+id/text_easemind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/easemind"
            android:fontFamily="@font/plusjakartasans_bold"
            android:textSize="48sp"
            android:textColor="@color/orange_bg"
            android:layout_marginVertical="10dp" />

        <TextView
            android:id="@+id/text_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/plusjakartasans_bold"
            android:text="@string/welcome"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_google_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/logo_google"
            android:padding="10dp"
            android:text="@string/google_login"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:background="@drawable/button_google_login"
            android:fontFamily="@font/plusjakartasans_bold"
            android:layout_marginVertical="55dp"
            android:layout_marginHorizontal="28dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>