<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".ui.profile.profileFragment.ProfileFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:paddingBottom="20dp"
        android:gravity="center"
        android:background="@drawable/top_profile_linear"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp">
            
            <TextView
                android:id="@+id/question_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/plusjakartasans_bold"
                android:padding="9dp"
                android:layout_gravity="center"
                android:text="@string/profile"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_logout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="5dp"
                android:layout_gravity="end"
                android:paddingVertical="1dp"
                android:paddingHorizontal="8dp"
                android:background="@drawable/button_red_logout"
                android:fontFamily="@font/plusjakartasans_bold"
                android:text="@string/logout"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textSize="13sp"
                android:drawableStart="@drawable/ic_logout"/>

        </FrameLayout>
        
        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:cardCornerRadius="75dp">

            <ImageView
                android:id="@+id/image_profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:srcCompat="@tools:sample/avatars" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/plusjakartasans_bold"
            android:gravity="center"
            android:text="@string/name"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/plusjakartasans_bold"
            android:gravity="center"
            android:text="@string/email"
            android:textColor="#67686B"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="280dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/plusjakartasans_bold"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/age"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/age_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/plusjakartasans_regular"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/age_description"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/plusjakartasans_bold"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/gender"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/gender_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/plusjakartasans_regular"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/gender_description"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </TableRow>
        </TableLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/edit_profile"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginHorizontal="55dp"
            android:background="@drawable/button_square_blue"
            android:text="@string/edit_profile"
            android:textColor="@color/white" />

    </LinearLayout>



</FrameLayout>
