<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".ui.profile.editProfileFragment.EditProfileFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:gravity="center"
        android:background="@color/yellow"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/arrow_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="9dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/baseline_arrow_back_24" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:cardCornerRadius="75dp">

            <ImageView
                android:id="@+id/image_profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:srcCompat="@tools:sample/avatars" />

        </androidx.cardview.widget.CardView>

        <EditText
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/plusjakartasans_bold"
            android:gravity="center"
            android:text="@string/name"
            android:textSize="16sp"
            android:background="@android:color/transparent"
            app:drawableEndCompat="@drawable/ic_edit_profile"/>

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/plusjakartasans_bold"
            android:gravity="center"
            android:text="@string/email"
            android:textColor="#67686B"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
        <TextView
            android:id="@+id/age"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/plusjakartasans_bold"
            android:gravity="center"
            android:text="@string/age"
            android:textSize="14sp" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="center">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/age_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/age_description" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/gender"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/plusjakartasans_bold"
            android:gravity="center"
            android:text="@string/gender"
            android:textSize="14sp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="center">

            <AutoCompleteTextView
                android:id="@+id/gender_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:inputType="none"
                android:text="@string/gender_description" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/button_square_blue"
            android:text="@string/save"
            android:textColor="@color/white">

        </androidx.appcompat.widget.AppCompatButton>

    </LinearLayout>


</FrameLayout>