<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="21dp"
    tools:context=".ui.questionnaire.QuestionSleepPatternsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/arrow_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="9dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/baseline_arrow_back_24" />

            <TextView
                android:id="@+id/question_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/plusjakartasans_bold"
                android:padding="9dp"
                android:text="Question 3"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/arrow_back"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/question_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/plusjakartasans_bold"
                android:padding="9dp"
                android:text="3/5"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

<!--        <TextView-->
<!--            android:id="@+id/question3"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="61sp"-->
<!--            android:layout_marginBottom="25dp"-->
<!--            android:fontFamily="@font/plusjakartasans_bold"-->
<!--            android:gravity="center"-->
<!--            android:text="@string/sleep_quality"-->
<!--            android:textSize="24sp" />-->

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="8dp"
            android:elevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/question6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="61sp"
                    android:layout_marginBottom="25dp"
                    android:fontFamily="@font/plusjakartasans_bold"
                    android:gravity="center"
                    android:text="@string/sleep_quality"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/very_poor_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="4dp"
                    android:paddingVertical="12dp"
                    android:backgroundTint="#F4F4F4"
                    android:textColor="@color/black"
                    android:text="@string/very_poor" />
                <Button
                    android:id="@+id/poor_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="4dp"
                    android:paddingVertical="12dp"
                    android:backgroundTint="#F4F4F4"
                    android:textColor="@color/black"
                    android:text="@string/poor" />
                <Button
                    android:id="@+id/average_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="4dp"
                    android:paddingVertical="12dp"
                    android:backgroundTint="#F4F4F4"
                    android:textColor="@color/black"
                    android:text="@string/average" />
                <Button
                    android:id="@+id/good_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="4dp"
                    android:paddingVertical="12dp"
                    android:backgroundTint="#F4F4F4"
                    android:textColor="@color/black"
                    android:text="@string/good" />
                <Button
                    android:id="@+id/excellent_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="4dp"
                    android:paddingVertical="12dp"
                    android:backgroundTint="#F4F4F4"
                    android:textColor="@color/black"
                    android:text="@string/excellent" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

<!--        <androidx.appcompat.widget.AppCompatButton-->
<!--            android:id="@+id/very_poor_btn"-->
<!--            style="@android:style/Widget.Button"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginBottom="25dp"-->
<!--            android:background="@color/white"-->
<!--            android:text="@string/very_poor"-->
<!--            android:textColor="@color/button_text_selector">-->

<!--        </androidx.appcompat.widget.AppCompatButton>-->

<!--        <androidx.appcompat.widget.AppCompatButton-->
<!--            android:id="@+id/poor_btn"-->
<!--            style="@android:style/Widget.Button"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginBottom="25dp"-->
<!--            android:background="@color/white"-->
<!--            android:text="@string/poor"-->
<!--            android:textColor="@color/button_text_selector">-->

<!--        </androidx.appcompat.widget.AppCompatButton>-->

<!--        <androidx.appcompat.widget.AppCompatButton-->
<!--            android:id="@+id/average_btn"-->
<!--            style="@android:style/Widget.Button"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginBottom="25dp"-->
<!--            android:background="@color/white"-->
<!--            android:text="@string/average"-->
<!--            android:textColor="@color/button_text_selector">-->

<!--        </androidx.appcompat.widget.AppCompatButton>-->

<!--        <androidx.appcompat.widget.AppCompatButton-->
<!--            android:id="@+id/good_btn"-->
<!--            style="@android:style/Widget.Button"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginBottom="25dp"-->
<!--            android:background="@color/white"-->
<!--            android:text="@string/good"-->
<!--            android:textColor="@color/button_text_selector">-->

<!--        </androidx.appcompat.widget.AppCompatButton>-->

<!--        <androidx.appcompat.widget.AppCompatButton-->
<!--            android:id="@+id/excellent_btn"-->
<!--            style="@android:style/Widget.Button"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginBottom="25dp"-->
<!--            android:background="@color/white"-->
<!--            android:text="@string/excellent"-->
<!--            android:textColor="@color/button_text_selector">-->

<!--        </androidx.appcompat.widget.AppCompatButton>-->

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/next"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/button_square_blue"
            android:text="@string/next"
            android:textColor="@color/white">
        </androidx.appcompat.widget.AppCompatButton>
    </LinearLayout>
</FrameLayout>